deployments/kubernetes/ws-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ws-gateway-production
  namespace: tuai
  labels:
    app.kubernetes.io/name: ws-gateway
    app.kubernetes.io/component: stock-gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ws-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
